Add favourite hobbies to index.html.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <!-- информация за мен  -->
     <div>Здравейте, казвам се Георги!</div>
+ 
+    <!-- - информация за моите хобита и интереси -->
+    <div>Обичам да бягам, карам колело и туризмът. Решаването на судоку и електро-инженерството са ми начин да се оспокоя.</div>
      
 </body>
 </html>
