Spelling correction of hobbies in index.html.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>Здравейте, казвам се Георги!</div>
  
     <!-- - информация за моите хобита и интереси -->
-    <div>Обичам да бягам, карам колело и туризмът. Решаването на судоку и електро-инженерството са ми начин да се оспокоя.</div>
+    <div>Обичам да бягам, карането на колело и туризмът. Решаването на судоку и електро-инженерството са ми начин да се успокоя.</div>
      
 </body>
 </html>
