Add favourite video to index.html.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
  
     <!-- - информация за моите хобита и интереси -->
     <div>Обичам да бягам, карането на колело и туризмът. Решаването на судоку и електро-инженерството са ми начин да се успокоя.</div>
+
+    <!-- - линк към материал на любим content creator, които ме е вдъхновил -->
+    <div>https://www.youtube.com/watch?v=gnZmRWTSyLs</div>
      
+
 </body>
 </html>
