Add topic to index.html.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- - линк към материал на любим content creator, които ме е вдъхновил -->
     <div>https://www.youtube.com/watch?v=gnZmRWTSyLs</div>
      
+    <!-- - информация за моят канал какво ще правя, как ще го правя и какво да очакват феновете -->
+    <div>В канала ми ще се говори за мъжете, тяхната мъжественост и държание. Ще се наблегне на твърдото държание и отстояване на интересите.</div>
 
 </body>
 </html>
