Add service price in index.html.

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <!-- - информация за моят канал какво ще правя, как ще го правя и какво да очакват феновете -->
     <div>В канала ми ще се говори за мъжете, тяхната мъжественост и държание. Ще се наблегне на твърдото държание и отстояване на интересите.</div>
 
+    <!-- - остойностяване на моите услуги -->
+    <div>Предлагам индивидуална консултация, която би ви помогнала да успеете и да станете финансово обезпечени за 50 лева в рамките на 30 минути.</div>
+
 </body>
 </html>
